@@ -1,4 +1,6 @@
 - MANTA-142 improve contig alignment for large events
+- MANTA-160 add pseudo-coloring to assmembly, and improve multi-pass
+read/contig association
 - MANTA-170 improve pair allele support accuracy
 - MANTA-139 add shadow and chimera reads into pair counts
 v0.21.0
